[tool.poetry]
name = "retirement-accelerator"
version = "0.1.0"
description = ""
authors = ["Rain Wu"]
readme = "README.md"
packages = [{include = "retirement_accelerator"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
aiodns = "^3.0.0"
aiofiles = "^23.1.0"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py311']
include = '\.pyi?$'

[tool.isort]
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
src_paths = ['derivation', 'tests']

[tool.mypy]
python_version = "3.11"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
exclude = [
    "^tests/.*$",
]
plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
